--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ node_modules
 
 ## Uncomment line below if you prefer to
 ## keep compiled files out of version control
-# dist/
+dist/
+vendor/
+composer.lock
