--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "eject": "cgb-scripts eject"
   },
   "dependencies": {
-    "cgb-scripts": "1.15.0",
+    "cgb-scripts": "^1.18.1",
     "classnames": "^2.2.6",
     "d3-dsv": "^1.1.1",
     "d3-time-format": "^2.1.3",
     "prop-types": "^15.7.2",
-    "react": "^16.8.4",
-    "react-dom": "^16.8.4",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
     "react-stockcharts": "^0.7.8"
   }
 }
