--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "eject": "cgb-scripts eject"
   },
   "dependencies": {
-    "cgb-scripts": "1.15.0",
+    "cgb-scripts": "^1.23.1",
     "classnames": "^2.2.6",
     "d3-dsv": "^1.1.1",
     "d3-time-format": "^2.1.3",
