--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "cgb-scripts start",
-    "build": "cgb-scripts build",
-    "eject": "cgb-scripts eject"
+    "start": "wp-scripts start src/index.js --output-path=build",
+    "build": "wp-scripts build src/index.js --output-path=build"
+  },
+  "engines": {
+    "node": ">=20 <21"
   },
   "dependencies": {
-    "cgb-scripts": "^1.23.1",
     "classnames": "^2.2.6",
     "d3-dsv": "^1.1.1",
     "d3-time-format": "^2.1.3",
@@ -16,5 +17,11 @@
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-stockcharts": "^0.7.8"
+  },
+  "devDependencies": {
+    "@wordpress/scripts": "^31.4.0",
+    "postcss": "^8.4.49",
+    "webpack": "^5.105.2",
+    "webpack-cli": "^5.1.4"
   }
 }
